deploy/k8s-task-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-task-deplyoment
  labels:
    app: k8s-task
spec:
  replicas: 2
  selector:
    matchLabels:
      app: k8s-task
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: k8s-task
    spec:
      containers:
        - name: k8s-task
          image: tardis5159/k8s-task:0.0.1
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8000
            initialDelaySeconds: 5
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8000
