deploy/k8s-task-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: k8s-task-service
spec:
  selector:
    app: k8s-task-app
  ports:
    - port: 8000
