deploy/k8s-task-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: default
  name: k8s-task-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: arch.homework
    - http:
        paths:
          - path: /otusapp(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: k8s-task-service
                port:
                  number: 8000
